--- a/css/theme/source/memphis.scss
+++ b/css/theme/source/memphis.scss
@@ -172,6 +172,10 @@ ul.icon-list {
 	left: 30px;
 }
 
+.iphone .reveal img.fixed {
+	left: 126px;
+}
+
 .reveal .controls {
 	transform: scale(0.7);
 	-ms-transform: scale(0.7);
